@@ -53,6 +53,8 @@ struct cnid_dbd_rply {
 typedef struct CNID_private {
     u_int32_t magic;
     char      db_dir[MAXPATHLEN + 1]; /* Database directory without /.AppleDB appended */
+    char      *cnidserver;
+    char      *cnidport;
     int       fd;		/* File descriptor to cnid_dbd */
     char      stamp[ADEDLEN_PRIVSYN]; /* db timestamp */
     char      *client_stamp;
