@@ -2,6 +2,7 @@ Changes in 2.1-beta2
 ====================
 * NEW: afpd: static generated AFP signature stored in afp_signature.conf,
        cf man 5 afp_signature.conf
+* NEW: afpd: clustering support: new per volume option "cnidserver".
 * FIX: afpd: prevent security attack guessing valid server accounts. afpd
        now returns error -5023 for unknown users, as does AppleFileServer.
 
